<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:icon="@android:drawable/ic_menu_info_details" android:title="@string/menu_territory_info" android:id="@+id/menu_info"></item>
	<group android:id="@+id/menu_group_table">		
		<item android:icon="@drawable/ic_menu_arrange" android:title="@string/menu_territory_layout">
			<menu>
				<item android:title="@string/menu_territory_arrange" android:id="@+id/menu_arrange" />
				<item android:title="@string/menu_territory_shift_up" android:id="@+id/menu_shift_up" />
				<item android:title="@string/menu_territory_shift_down" android:id="@+id/menu_shift_down" />
				<item android:title="@string/menu_territory_shift_left" android:id="@+id/menu_shift_left" />
				<item android:title="@string/menu_territory_shift_right" android:id="@+id/menu_shift_right" />
			</menu>
		</item>
	</group>  
	<group android:id="@+id/menu_group_list">		
		<item android:id="@+id/menu_sort" android:icon="@android:drawable/ic_menu_sort_by_size" android:title="@string/menu_territory_sort" />
	</group>  
	<item android:icon="@android:drawable/ic_menu_preferences" android:title="@string/menu_preferences" android:id="@+id/menu_preferences"></item>
	<item android:icon="@android:drawable/ic_menu_send" android:title="@string/menu_feedback" android:id="@+id/menu_feedback"></item>
	<item android:icon="@android:drawable/ic_menu_help" android:title="@string/menu_help" android:id="@+id/menu_help"></item>
</menu>
