<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.jwdroid"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">  
  
  <LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/Form.Layout">
  
  	<TextView
	  	style="@style/Form.Element.Text"
	  	android:text="@string/lbl_territory_name"/>
  	 
  	<EditText android:id="@+id/edit_territory_name"
  		style="@style/Form.Element.Edit"/>
  		  	 
  	<TextView
	  	style="@style/Form.Element.Text"
		android:text="@string/lbl_territory_desc"/>
  	 
  	<EditText android:id="@+id/edit_territory_desc"
		style="@style/Form.Element.Edit"/>
				  	 
	<LinearLayout
 		style="@style/Form.ButtonsLayout">
	 	<Button android:id="@+id/btn_ok"
	  		style="@style/Form.Button"
	  		android:text="@string/btn_add"/>
	  	<Button android:id="@+id/btn_cancel"
	  		style="@style/Form.Button"
	  		android:text="@string/btn_cancel"/>
	</LinearLayout>
  	  	 
  </LinearLayout>
</ScrollView>
