<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/territory"
  xmlns:android="http://schemas.android.com/apk/res/android"  
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  
      <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:background="@drawable/titlebar"
    	android:orientation="horizontal"
    	android:gravity="center_horizontal|top" >
    	<TextView android:id="@+id/territory_name"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:layout_marginTop="2dip"
    		android:layout_marginLeft="6dip"
    		android:textColor="#ffffff"
    		android:textSize="18dip"
    		android:lines="1"
    		android:textStyle="bold" 
    		android:text="@string/title_chrono"/>
    	<Button android:id="@+id/title_btn_ok"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:background="@drawable/title_btn_ok" 
    		android:visibility="invisible"/>
    </LinearLayout>
    
    <ScrollView 
	  android:layout_width="fill_parent"
	  android:layout_height="fill_parent"	  
	  android:fadingEdge="none"
	  android:fillViewport="true"
	  >    
	  
	  	<LinearLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical">
    
		    <LinearLayout
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:orientation="vertical"
		    	android:background="#ffffff"
		    	android:paddingBottom="8dip">
		    	
		    	<LinearLayout
			    	android:layout_width="fill_parent"
			    	android:layout_height="wrap_content"
			    	android:gravity="center">
			    	
			    	<ImageButton android:id="@+id/btn_timer_less" 
			    		android:layout_width="40dip"
			    		android:layout_height="40dip"
			    		android:layout_marginRight="12dip"
			    		android:src="@drawable/minus_disablable"/>		
		    	
			    	<TextView android:id="@+id/lbl_timer_hour"
			    		android:layout_width="wrap_content"
			    		android:layout_height="wrap_content"
			    		android:textSize="80dip"
			    		android:text="0"/>
			    	<TextView android:id="@+id/lbl_timer_colon"
			    		android:layout_width="wrap_content"
			    		android:layout_height="wrap_content"
			    		android:textSize="60dip"
			    		android:text=":"/>
			    	<TextView android:id="@+id/lbl_timer_minute"
			    		android:layout_width="wrap_content"
			    		android:layout_height="wrap_content"
			    		android:textSize="80dip"
			    		android:text="00"/>
			    		
			    	<ImageButton android:id="@+id/btn_timer_more" 
			    		android:layout_width="40dip"
			    		android:layout_height="40dip"
			    		android:layout_marginLeft="12dip"
			    		android:src="@drawable/plus_disablable"/>	
			    				    		
		    	</LinearLayout>
		    	
		    	<TextView android:id="@+id/lbl_started_time"
		    		android:layout_width="fill_parent"
			    	android:layout_height="wrap_content"
			    	android:layout_marginTop="-10dip"
			    	android:layout_marginBottom="7dip"
			    	android:gravity="center"
			    	android:textColor="#999999"
			    	android:textSize="15dip"
			    	android:text="@string/lbl_chrono_started_time" />
		    	
		    	<LinearLayout
			    	android:layout_width="fill_parent"
			    	android:layout_height="wrap_content"
			    	android:gravity="center">
			    	
			    	<Button android:id="@+id/btn_pause"
			    		android:layout_width="120dip"
			    		android:layout_height="wrap_content"
			    		android:textStyle="bold"
			    		android:text="@string/btn_chrono_pause" 
			    		android:visibility="gone"/>
			    	<Button android:id="@+id/btn_resume"
			    		android:layout_width="120dip"
			    		android:layout_height="wrap_content"
			    		android:textStyle="bold"
			    		android:text="@string/btn_chrono_resume" 
			    		android:visibility="gone"/>
			    	<Button android:id="@+id/btn_finish"
			    		android:layout_width="120dip"
			    		android:layout_height="wrap_content"
			    		android:textStyle="bold"
			    		android:text="@string/btn_chrono_finish"
			    		android:visibility="gone" />
			    	<Button android:id="@+id/btn_start"
			    		android:layout_width="120dip"
			    		android:layout_height="wrap_content"
			    		android:textStyle="bold"
			    		android:text="@string/btn_chrono_start" />
			    		
			    		
			    </LinearLayout>
		    		
		    </LinearLayout>
		    
		    <View 
		    	android:layout_width="fill_parent"
		    	android:layout_height="1px"
		    	android:background="#bbbbbb"/>
		    
		    <RelativeLayout
		    	android:layout_width="fill_parent"
		    	android:layout_height="fill_parent"
		    	android:background="#eeeeee"
		    	android:layout_gravity="center">
		    	
		   		    	
		    	
		    	<CheckBox android:id="@+id/chk_calc_auto" 
					android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			    	android:layout_alignParentTop="true"
		    		android:layout_centerHorizontal="true"
		    		android:layout_marginTop="4dip"
		    		android:checked="true"
		    		android:text="@string/chk_chrono_calc_auto" />
		    		
				<TableLayout 
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:layout_below="@id/chk_calc_auto"
		    		android:layout_centerHorizontal="true"
		    		android:layout_marginTop="2dip">
		    		
		    		<TableRow>
		    		
		    			<TextView  
				    		android:layout_width="wrap_content"
				    		android:layout_height="wrap_content"
				    		android:layout_gravity="right"
				    		android:paddingTop="10dip"
				    		android:textSize="16dip"
				    		android:textColor="#777"
				    		android:text="@string/lbl_magazines"/> 
				    		
				    	<LinearLayout
			    			android:layout_width="wrap_content"
			    			android:layout_height="wrap_content"
			    			android:gravity="center_vertical">
			    			
			    			<ImageButton android:id="@+id/btn_magazines_less" 
					    		android:layout_width="40dip"
					    		android:layout_height="40dip"
					    		android:layout_marginLeft="8dip"
					    		android:src="@drawable/minus_disablable"/>					    		
					    			
				    		<TextView android:id="@+id/text_magazines" 
					    		android:layout_width="30dip"
					    		android:layout_height="wrap_content"
					    		android:gravity="center"
					    		android:layout_marginLeft="8dip"
					    		android:textStyle="bold"
					    		android:textSize="20dip"
					    		android:text="0"/>    
					    		
					    	<ImageButton android:id="@+id/btn_magazines_more" 
					    		android:layout_width="40dip"
					    		android:layout_height="40dip"
					    		android:layout_marginLeft="8dip"
					    		android:src="@drawable/plus_disablable"/>	
			    			
			    		</LinearLayout>				    	
		    		
		    		</TableRow>
		    		
		    		<TableRow>
		    		
		    			<TextView 
				    		android:layout_width="100dip"
				    		android:layout_height="wrap_content"
				    		android:layout_gravity="right"
				    		android:paddingTop="10dip"
				    		android:textSize="16dip"
				    		android:textColor="#777"
				    		android:text="@string/lbl_brochures"/> 
				    		
				    	<LinearLayout
			    			android:layout_width="wrap_content"
			    			android:layout_height="wrap_content"
			    			android:gravity="center_vertical">
			    			
			    			<ImageButton android:id="@+id/btn_brochures_less" 
					    		android:layout_width="40dip"
					    		android:layout_height="40dip"
					    		android:layout_marginLeft="8dip"
					    		android:src="@drawable/minus_disablable"/>					    		
					    			
				    		<TextView android:id="@+id/text_brochures" 
					    		android:layout_width="30dip"
					    		android:layout_height="wrap_content"
					    		android:gravity="center"
					    		android:layout_marginLeft="8dip"
					    		android:textStyle="bold"
					    		android:textSize="20dip"
					    		android:text="0"/>    
					    		
					    	<ImageButton android:id="@+id/btn_brochures_more" 
					    		android:layout_width="40dip"
					    		android:layout_height="40dip"
					    		android:layout_marginLeft="8dip"
					    		android:src="@drawable/plus_disablable"/>	
			    			
			    		</LinearLayout>				    	
		    		
		    		</TableRow>
		    		
		    		<TableRow>
                    
                        <TextView 
                            android:layout_width="100dip"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:paddingTop="10dip"
                            android:textSize="16dip"
                            android:textColor="#777"
                            android:text="@string/lbl_tracts"/> 
                            
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical">
                            
                            <ImageButton android:id="@+id/btn_tracts_less" 
                                android:layout_width="40dip"
                                android:layout_height="40dip"
                                android:layout_marginLeft="8dip"
                                android:src="@drawable/minus_disablable"/>                              
                                    
                            <TextView android:id="@+id/text_tracts" 
                                android:layout_width="30dip"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_marginLeft="8dip"
                                android:textStyle="bold"
                                android:textSize="20dip"
                                android:text="0"/>    
                                
                            <ImageButton android:id="@+id/btn_tracts_more" 
                                android:layout_width="40dip"
                                android:layout_height="40dip"
                                android:layout_marginLeft="8dip"
                                android:src="@drawable/plus_disablable"/>   
                            
                        </LinearLayout>                     
                    
                    </TableRow>
		    		
		    		<TableRow>
		    		
		    			<TextView 
				    		android:layout_width="wrap_content"
				    		android:layout_height="wrap_content"
				    		android:layout_gravity="right"
				    		android:paddingTop="10dip"
				    		android:textSize="16dip"
				    		android:textColor="#777"
				    		android:text="@string/lbl_books"/> 
				    		
				    	<LinearLayout
			    			android:layout_width="wrap_content"
			    			android:layout_height="wrap_content"
			    			android:gravity="center_vertical">
			    			
			    			<ImageButton android:id="@+id/btn_books_less" 
					    		android:layout_width="40dip"
					    		android:layout_height="40dip"
					    		android:layout_marginLeft="8dip"
					    		android:src="@drawable/minus_disablable"/>					    		
					    			
				    		<TextView android:id="@+id/text_books" 
					    		android:layout_width="30dip"
					    		android:layout_height="wrap_content"
					    		android:gravity="center"
					    		android:layout_marginLeft="8dip"
					    		android:textStyle="bold"
					    		android:textSize="20dip"
					    		android:text="0"/>    
					    		
					    	<ImageButton android:id="@+id/btn_books_more" 
					    		android:layout_width="40dip"
					    		android:layout_height="40dip"
					    		android:layout_marginLeft="8dip"
					    		android:src="@drawable/plus_disablable"/>	
			    			
			    		</LinearLayout>				    	
		    		
		    		</TableRow>
		    		
		    		
		    		<TableRow>
		    		
		    			<TextView 
				    		android:layout_width="wrap_content"
				    		android:layout_height="wrap_content"
				    		android:layout_gravity="right"
				    		android:paddingTop="10dip"
				    		android:textSize="16dip"
				    		android:textColor="#777"
				    		android:text="@string/lbl_returns"/> 
				    		
				    	<LinearLayout
			    			android:layout_width="wrap_content"
			    			android:layout_height="wrap_content"
			    			android:gravity="center_vertical">
			    			
			    			<ImageButton android:id="@+id/btn_returns_less" 
					    		android:layout_width="40dip"
					    		android:layout_height="40dip"
					    		android:layout_marginLeft="8dip"
					    		android:src="@drawable/minus_disablable"/>					    		
					    			
				    		<TextView android:id="@+id/text_returns" 
					    		android:layout_width="30dip"
					    		android:layout_height="wrap_content"
					    		android:gravity="center"
					    		android:layout_marginLeft="8dip"
					    		android:textStyle="bold"
					    		android:textSize="20dip"
					    		android:text="0"/>    
					    		
					    	<ImageButton android:id="@+id/btn_returns_more" 
					    		android:layout_width="40dip"
					    		android:layout_height="40dip"
					    		android:layout_marginLeft="8dip"
					    		android:src="@drawable/plus_disablable"/>	
			    			
			    		</LinearLayout>				    	
		    		
		    		</TableRow>
		    	
		    	</TableLayout>
		    	
		    </RelativeLayout>
		    
		</LinearLayout>
    
  </ScrollView>


    
</LinearLayout>
