<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
  <LinearLayout android:id="@+id/main_menu_logo"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_alignParentTop="true"
  	android:background="#afafaf"
  	android:gravity="center">
	  <ImageView
	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content" 
	  	android:src="@drawable/main_menu_logo"/>
  </LinearLayout>
  	
  	
  <TableLayout
      android:layout_below="@id/main_menu_logo" 
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_marginTop="10dip"
  	android:layout_centerHorizontal="true"
  	android:layout_gravity="center_horizontal">
  	
  	<TableRow>  	
  		<LinearLayout 
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:padding="20dip"
  			android:orientation="vertical"
  			android:gravity="center_horizontal|top">
  	
		  	<ImageView android:id="@+id/btn_territories"
		  		android:layout_width="wrap_content"
		  		android:layout_height="wrap_content"	
		  		android:src="@drawable/main_menu_territories"
		  		android:clickable="true"/>
	  
			<TextView
			  	android:layout_width="wrap_content" 
			  	android:layout_height="wrap_content"
			  	android:text="@string/title_territory_list"
			  	android:textStyle="bold"
			  	android:textSize="18dip"/>  
		</LinearLayout>
		
		
		<LinearLayout 
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:padding="20dip"
  			android:orientation="vertical"
  			android:gravity="center_horizontal|top">
  	
		  	<ImageView android:id="@+id/btn_people"	  	
		  		android:layout_width="wrap_content"
		  		android:layout_height="wrap_content"	
		  		android:src="@drawable/main_menu_people"
		  		android:clickable="true"/>
	  
			<TextView
			  	android:layout_width="wrap_content"
			  	android:layout_height="wrap_content"
			  	android:text="@string/title_people"
			  	android:textStyle="bold"
			  	android:textSize="18dip"/>  
		</LinearLayout>
		  	
	</TableRow>	
	
	<TableRow>
	
		<LinearLayout 
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:padding="20dip"
  			android:clickable="true"
  			android:orientation="vertical"
  			android:gravity="center_horizontal|top">
  	
		  	<ImageView android:id="@+id/btn_reports"  	
		  		android:layout_width="wrap_content"
		  		android:layout_height="wrap_content"	
		  		android:src="@drawable/main_menu_reports"
		  		android:clickable="true"/>
	  
			<TextView
			  	android:layout_width="wrap_content"
			  	android:layout_height="wrap_content"
			  	android:text="@string/title_reports"
			  	android:textStyle="bold"
			  	android:textSize="18dip"/>  
		</LinearLayout>  	
		
		<LinearLayout 
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:padding="20dip"
  			android:clickable="true"
  			android:orientation="vertical"
  			android:gravity="center_horizontal|top">
  	
		  	<ImageView android:id="@+id/btn_chrono"  	
		  		android:layout_width="wrap_content"
		  		android:layout_height="wrap_content"	
		  		android:src="@drawable/main_menu_chrono"
		  		android:clickable="true"/>
	  
			<TextView
			  	android:layout_width="wrap_content"
			  	android:layout_height="wrap_content"
			  	android:text="@string/title_chrono"
			  	android:textStyle="bold"
			  	android:textSize="18dip"/>  
		</LinearLayout>  	
	  		
	 </TableRow>
	 </TableLayout>
	 
    <LinearLayout android:id="@+id/btn_drive"
        android:layout_alignParentBottom="true" 
        android:background="@drawable/main_menu_drive"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal|center_vertical">

        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"    
            android:src="@drawable/dropbox"/>
  
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/title_drive"
            android:textSize="16dip"/>  
    </LinearLayout>
   
	 
	 
	  
	
    
</RelativeLayout>
